--- a/ondemand/Dockerfile
+++ b/ondemand/Dockerfile
@@ -12,17 +12,7 @@ ARG TARGETARCH
 FROM stage-${TARGETARCH} AS final
 
 COPY . /build
-RUN /build/install.sh && rm -rf /build
-COPY cluster-config.yml /etc/ood/config/clusters.d/hpc.yml
-COPY bc_desktop.yml /etc/ood/config/apps/bc_desktop/hpc.yml
-COPY jupyter /var/www/ood/apps/sys/jupyter
-COPY python_job_template /etc/ood/config/apps/myjobs/templates/python
-COPY motd /etc/motd
+RUN /build/install.sh
 COPY entrypoint.sh /usr/local/bin/entrypoint.sh
-COPY notebook_data /data/notebook_data
-COPY initializers /etc/ood/config/apps/dashboard/initializers
-COPY config/dashboard/env /etc/ood/config/apps/dashboard/env
-COPY config/ondemand.yml /etc/ood/config/ondemand.d/ondemand.yml
-COPY config/dashboard/widgets /etc/ood/config/apps/dashboard/views/widgets
 
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
