--- a/slurm/Dockerfile
+++ b/slurm/Dockerfile
@@ -10,6 +10,7 @@ ARG SLURM_VERSION
 COPY . /build
 RUN /build/install.sh && rm -rf /build
 COPY slurm.conf /etc/slurm/slurm.conf
+COPY cgroup.conf /etc/slurm/cgroup.conf
 COPY --chown=slurm:slurm slurmdbd.conf /etc/slurm/slurmdbd.conf
 RUN chmod 600 /etc/slurm/slurmdbd.conf
 COPY entrypoint.sh /usr/local/bin/entrypoint.sh
