--- a/slurm/slurm.conf
+++ b/slurm/slurm.conf
@@ -17,11 +17,13 @@ SlurmctldPidFile=/var/run/slurmd/slurmctld.pid
 SlurmdPidFile=/var/run/slurmd/slurmd.pid
 ProctrackType=proctrack/linuxproc
 ReturnToService=0
+UsePAM=1
 
 #
 # TIMERS
 SlurmctldTimeout=300
 SlurmdTimeout=300
+GetEnvTimeout=5
 InactiveLimit=0
 MinJobAge=300
 KillWait=30
