--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,6 +85,7 @@ services:
     init: true
     image: ubccr/hpcts:slurm-${HPCTS_VERSION}
     command: ["slurmd"]
+    privileged: true
     hostname: cpn01
     container_name: cpn01
     networks:
@@ -105,6 +106,7 @@ services:
     init: true
     image: ubccr/hpcts:slurm-${HPCTS_VERSION}
     command: ["slurmd"]
+    privileged: true
     hostname: cpn02
     container_name: cpn02
     networks:
@@ -163,10 +165,11 @@ services:
       - frontend  
 
   keycloak:
-    image: ubccr/keycloak:26.1.0
+    image: ubccr/keycloak:26.1.2
     build:
       context: ./keycloak
     hostname: keycloak
+    container_name: keycloak
     environment:
       KC_HOSTNAME: keycloak
       KC_HTTP_PORT: 7080
